# SOME-IP_Testing

./: .gitignore  CMakeLists.txt  README.md  build.py  test.py
client/: client.cpp  client.hpp
server/: server.cpp  server.hpp
src/client/: CMakeLists.txt  client.cpp
src/routingmanagerd/: CMakeLists.txt  routingmanagerd.cpp
src/service/: CMakeLists.txt  service.cpp
test/: client.feature  client_test.go
